# belledonne

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  lmdb_CMakeLists.txt
belledonne/: CMakeLists.txt
belledonne/implementation/: CMakeLists.txt
belledonne/implementation/common/: CMakeLists.txt
belledonne/implementation/plugin/: CMakeLists.txt
belledonne/implementation/plugin/BelledonneVSIX/: BelledonneVSIX.csproj  BrowserWindow.cs  BrowserWindowCommand.cs  BrowserWindowControl.xaml  BrowserWindowControl.xaml.cs  BrowserWindowPackage.cs  BrowserWindowPackage.vsct  VSPackage.resx  source.extension.vsixmanifest
belledonne/implementation/plugin/BelledonneVSIX/Properties/: AssemblyInfo.cs
belledonne/implementation/standalone/: CMakeLists.txt  main.cc
belledonne/src/: CMakeLists.txt  common.h  configuration.h
belledonne/src/database/: CMakeLists.txt  database.cc  database.h  db_manager.cc  db_manager.h  visitor.cc  visitor.h
belledonne/src/tools/: CMakeLists.txt  filesystem.cc  filesystem.h
belledonne/tests/: CMakeLists.txt  main.cc
belledonne/tests/database/: CMakeLists.txt  tests_database_database.cc
belledonne/tests/tools/: CMakeLists.txt  tests_tools_filesystem.cc
cmake/Modules/: FindLibClang.cmake
